# ACMS_coursework

./: .gitignore  README.md  pyproject.toml
acms/bootstrap_particle_filter/: bootstrap_particle_filter.py
acms/experiment/: experiment.py  experiment_scheduler.py  ssm_experiment.py
acms/general_state_space_model/: state_space_model.py
acms/gradient_ssm_training/: differebtiable_smc.py  train_differentiable_smc.py
acms/pyro_models/: bfp_run.py  example_smc_filter.py  experiment_scheduler.py  pmcmc.py  pyro_bfp.py  pyro_smc_model.py  pyro_ssm.py  smc_experiment.py  train_pmcmc.py
acms/state_space_model/: general_state_space_model.py  state_space_model.py
