[tool.poetry]
name = "acms-coursework"
version = "0.1.0"
description = ""
authors = ["Abdelhamid Ezzerg <ezzergabdelhamid@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{include = "acms"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.3"
torch = "^2.5.1"
pyro-ppl = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
